--- a/TeacherPortalAs/Components/Pages/Home.razor
+++ b/TeacherPortalAs/Components/Pages/Home.razor
@@ -92,7 +92,7 @@
         </div>
     </div>
 
-    <div class="about-section">
+    <div class="about-section-with-zoom">
         <div class="pattern-background">
             <span>📚</span>
             <span>✏️</span>
