Удаление материалов и предметов. Добавление тестов и их реализация. Улучшена компоновка странц блога и тестов. Прочие небольшие изменения и улучшения

--- a/TeacherPortalAs/Components/Layout/NavMenu.razor
+++ b/TeacherPortalAs/Components/Layout/NavMenu.razor
@@ -12,14 +12,14 @@
             <span>Главная</span>
         </NavLink>
         
-        <NavLink href="subjects">
-            <i class="fas fa-book"></i>
-            <span>Предметы</span>
+        <NavLink href="blog">
+            <i class="fas fa-blog"></i>
+            <span>Блог</span>
         </NavLink>
         
-        <NavLink href="blog">
-            <i class="fas fa-newspaper"></i>
-            <span>Блог</span>
+        <NavLink href="tests">
+            <i class="fas fa-tasks"></i>
+            <span>Тесты</span>
         </NavLink>
         
         <NavLink href="admin">
