--- a/TeacherPortalAs/Components/Pages/Home.razor
+++ b/TeacherPortalAs/Components/Pages/Home.razor
@@ -118,9 +118,9 @@
     {
         new FeatureCard 
         { 
-            Icon = "fas fa-book",
-            Title = "Учебные материалы",
-            Description = "Доступ к обширной библиотеке образовательных ресурсов"
+            Icon = "fas fa-blog",
+            Title = "Блог",
+            Description = "Актуальные статьи и новости из мира образования"
         },
         new FeatureCard 
         { 
